--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "rm .next -r && next dev"
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
